Fixed `high contrast` overrides colors

--- a/styles/colors-highcontrast.scss
+++ b/styles/colors-highcontrast.scss
@@ -27,8 +27,10 @@
 	--sand-alert-overlay-focus-text-color: #ffffff;
 
 	// component colors
-	--sand-alert-overlay-progress-color-rgb: rgb(230, 230, 230); // #e6e6e6
-	--sand-alert-overlay-progress-bg-color-rgb: rgb(55, 58, 65); // #373a41
+	--sand-alert-overlay-progress-color-rgb-base: 230, 230, 230;
+	--sand-alert-overlay-progress-color-rgb: rgb(var(--sand-alert-overlay-progress-color-rgb-base)); // #e6e6e6
+	--sand-alert-overlay-progress-bg-color-rgb-base: 55, 58, 65;
+	--sand-alert-overlay-progress-bg-color-rgb: rgb(var(--sand-alert-overlay-progress-bg-color-rgb-base)); // #373a41
 	--sand-alert-overlay-progress-bg-color-alpha: 100%;
 	--sand-alert-overlay-checkbox-color: #e6e6e6;
 	--sand-alert-overlay-checkbox-disabled-selected-text-color: #4c5059;
